--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.6.3",
     "next": "^13.5.6",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
