--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "express-session": "^1.17.3",
     "mongoose": "^7.6.3",
     "next": "^13.5.6",
@@ -20,7 +23,9 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
     "remixicon": "^3.5.0",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3"
