--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "remixicon": "^3.5.0",
