--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "remixicon": "^3.5.0",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3"
